한솔 #쪽지창 디자인 #자유시장 글 페이지 디자인 수정

--- a/WonInfo/app/src/main/res/drawable/all_shape_roundbox.xml
+++ b/WonInfo/app/src/main/res/drawable/all_shape_roundbox.xml
@@ -10,7 +10,7 @@
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp" />
     <stroke
-        android:width="2dp"
+        android:width="2px"
         android:color="#D5D5D5" />
 </shape>
 
