--- a/WonInfo/app/src/main/res/layout/community_longclick_popup.xml
+++ b/WonInfo/app/src/main/res/layout/community_longclick_popup.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/item_round_box"
+    android:id="@+id/community_layout_commentpopup"
     android:clickable="true">
 
 
